:bug: fixed cards alignment for empty categories

--- a/src/App.scss
+++ b/src/App.scss
@@ -316,9 +316,8 @@
     }
 
     .home {
-      display: flex;
+      @include flexXjustifyCentered;
       flex-wrap: wrap;
-      justify-content: center;
       background-color: $secondaryColorInverted;
       .categoryCard {
         background-color: $secondaryColor;
@@ -328,23 +327,26 @@
         box-shadow: 0px 0px 15px 8px rgba(0, 0, 0, 0.2);
 
         .thumbnail {
+          display: flex;
           padding: 20px;
           padding-bottom: 10px;
-          background-size: contain;
           img,
           .fallback {
-            width: calc(280px);
+            width: 280px;
             height: calc(2 / 3 * 280px);
             border-radius: 20px;
           }
 
           .fallback {
-            font-size: calc(10px + 1.75vmin) !important;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include flexXalignCentered;
+            font-size: calc(10px + 1.5vmin) !important;
             color: $secondaryColor;
             background-color: $secondaryColorInverted;
+            text-align: center;
+
+            span {
+              padding: 0px 15px;
+            }
           }
         }
         .title {
